--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 bottle==0.12.19
 requests==2.20.0
-git+git://github.com/lukasschwab/jsonfeed.git#egg=jsonfeed
+git+git://github.com/lukasschwab/jsonfeed.git#egg=jsonfeed==0.1.9
