--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 bottle==0.12.20
 requests==2.20.0
-git+https://github.com/lukasschwab/jsonfeed.git#egg=jsonfeed==0.1.9
+git+https://github.com/lukasschwab/jsonfeed.git@1.0.0#egg=jsonfeed
